--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   section {
     display: block;
   }
- 
+
   h1 {
     font-size: 2em;
     margin: 0.67em 0;
@@ -98,71 +98,11 @@ body {
   }
   
   
-  audio,
-  video {
-    display: inline-block;
-  }
-  
-  audio:not([controls]) {
-    display: none;
-    height: 0;
-  }
-  
   img {
     border-style: none;
   }
-  
-  
-  svg:not(:root) {
-    overflow: hidden;
-  }
-  
-  
-  button,
-  input,
-  optgroup,
-  select,
-  textarea {
-    font-family: sans-serif;
-    font-size: 100%;
-    line-height: 1.15;
-    margin: 0;
-  }
 
-  button,
-  input {
-    overflow: visible;
-  }
-  
-  button,
-  select {
-    text-transform: none;
-  }
- 
-  button,
-  html [type="button"],
-  [type="reset"],
-  [type="submit"] {
-    -webkit-appearance: button;
-  }
-  
-  button::-moz-focus-inner,
-  [type="button"]::-moz-focus-inner,
-  [type="reset"]::-moz-focus-inner,
-  [type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-  }
-  
-  
-  button:-moz-focusring,
-  [type="button"]:-moz-focusring,
-  [type="reset"]:-moz-focusring,
-  [type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
-  }
-  
-  
+   
   fieldset {
     padding: 0.35em 0.75em 0.625em;
   }
@@ -177,7 +117,6 @@ body {
     padding: 0; 
     white-space: normal;
   }
-  
   
   progress {
     display: inline-block;
@@ -196,35 +135,12 @@ body {
             box-sizing: border-box;
     padding: 0; 
   }
-  
-  [type="number"]::-webkit-inner-spin-button,
-  [type="number"]::-webkit-outer-spin-button {
-    height: auto;
-  }
-  
-  [type="search"] {
-    -webkit-appearance: textfield;
-    outline-offset: -2px;
-  }
 
-  
-  [type="search"]::-webkit-search-cancel-button,
-  [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-  }
-  
-
-  ::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    font: inherit;
-  }
-  
   
   details,
   menu {
     display: block;
   }
-  
   
   summary {
     display: list-item;
@@ -301,6 +217,20 @@ body {
   .header__nav {
     height: 57px;
   }
+
+  .visually-hidden:not(:focus):not(:active) {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 
   .nav__logo-link {
     position: absolute;
@@ -559,21 +489,6 @@ body {
   display: block;
   }
 
-  .info__modal-hide {
-    display: none;
-  }
-
-  .info__modal {
-    display: block;
-    -webkit-animation: bounce 1s;
-    animation: bounce 1s;
-  }
-
-  .info__modal-error {
-    -webkit-animation: shake 0.5s;
-    animation: shake 0.5s;
-  }
-
   .icon__souvenir {
     background: url("../img/icon-2.png") no-repeat center;
     height: 74px;
@@ -698,302 +613,8 @@ body {
     margin: 0 auto;
     padding-top: 5px;
   }
-  .travel__title {
-    font-size:30px;
-    color:black;  
-    line-height: 36px;
-    margin-bottom:23px;
-  }
 
-  .travel__desc {
-    font-size:14px;
-    color:#333333;
-    line-height: 24px;
-    font-weight: normal;
-    margin-top:0;
-    margin-bottom: 45px;
-  }
-
-  .travel__text {
-    font-size: 21px;
-    line-height: 26px;
-    color: black;
-    text-align: center;
-    padding-top: 28px;
-    width: 440px;
-    height: 100%;
-  }
-
-  .kids__button {
-    width: 100%;
-  }
-  
-  .kids__label {
-    width: 100%;
-    padding-left: 20px;
-  }
-
-  .older__label {
-    width: 50%;
-    text-align: left;
-  }
-
-  .older__button,
-  .kids__button {
-    white-space: nowrap;
-  }
-
-  .in__label,
-  .out__label {
-    width: 37%;
-    text-align: left;
-  }
-
-  .in__label-text,
-  .out__label-text {
-    width: 72%;
-  }
-
-  .in__label,
-  .out__label,
-  .older__label,
-  .kids__label {
-    font-size:14px;
-    line-height: 26px;
-    color:black;
-  }
-
-  .travel__btn {
-    font-size: 21px;
-    line-height: 48px;
-    color: white;
-    background: #766357;
-    width: 568px;
-    min-height: 86px;
-    text-transform: uppercase;
-    border: 0px;
-    font-family: "PT Sans","Arial", sans-serif;
-    font-weight: 800;
-  }
-
-  .travel__btn:hover {
-    background: #604e43;
-  }
-
-  .travel__btn:active {
-    background: #503e33;
-    color:#818181;
-  }
-
-  .older,
-  .kids {
-    width: 50%;
-  }
-
-  .info__wrapper {
-    width: 100%;
-  }
-
-  .info__older,
-  .info__kids,
-  .info__wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-    align-items: baseline;
-    margin-bottom: -8px;
-    width: 458px;
-  }
-
-  .in,
-  .out {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-    align-items: baseline;
-    position: relative;
-  }
-
-  .in__label-text {
-    width: 100%;
-    height: 38px;
-    padding: 0 15px;
-  }
-
-  .out__label-text {
-    width: 100%;
-    height: 38px;
-    padding: 0 15px;
-  }
-
-  .older__label-numbers,
-  .kids__label-numbers {
-    margin-right: -4px;
-    margin-left: -4px;
-    height: 36px;
-  }
-
-  .kids__number-plus,
-  .kids__number-minus,
-  .older__number-plus,
-  .older__number-minus {
-    padding-bottom: 9px;
-    padding-top: 8px;
-    padding-left: 14.2px;
-    padding-right: 14.2px;
-  }
-
-  .older__label-numbers,
-  .kids__label-numbers,
-  .older__number-minus,
-  .older__number-plus,
-  .kids__number-minus,
-  .kids__number-plus {
-    width: 38px;
-    height: 36px;
-    text-align: center;
-  }
-
-  .in__label-text,
-  .out__label-text,
-  .older__label-numbers,
-  .kids__label-numbers {
-    border:0px;
-    background-color:#f2f2f2; 
-    margin-bottom:29px;
-    font-family: "PT Sans","Arial", sans-serif;
-    font-weight: 800;
-    text-transform: uppercase;
-    font-size: 14px;
-  }
-
-  .kids__label-numbers {
-    height: 36px;
-  }
-
-  .older__label-numbers {
-    height: 36px;
-  }
-
-  .in__label-text:hover + .in__img,
-  .out__label-text:hover + .out__img,
-  .older__label-numbers:hover,
-  .kids__label-numbers:hover {
-    background-color: #ebebeb;
-    fill:black;
-  }
-
-  .older__label-numbers:focus,
-  .kids__label-numbers:focus {
-    background-color: #ffffff;
-    border:2px solid #e5e5e5;
-    outline: none;
-    width: 34px;
-    height: 32px;
-  }
-
-  .in__label-text:focus,
-  .out__label-text:focus {
-    background-color: #ffffff;
-    border:2px solid #e5e5e5;
-    outline: none;
-    display: block;
-    height: 34px
-  }
-
-  .out__img,
-  .in__img {
-    top:7px;
-    position: absolute;
-    fill:#cacaca;
-    left:94%;
-  }
-
-  .out__img:hover,
-  .in__img:hover {
-    fill:black;
-  }
-
-  .out__img:active,
-  .in__img:active {
-    fill:#81b3d2;
-  }
-
-  .older__number-minus,
-  .older__number-plus,
-  .kids__number-minus,
-  .kids__number-plus {
-    border: 0px;
-    background-color: #f2f2f2;
-    color:#818181;
-    cursor: pointer;
-  }
-
-  .older__svg-minus,
-  .older__svg-plus,
-  .kids__svg-minus,
-  .kids__svg-plus {
-    fill:#818181;
-    vertical-align: middle;
-  }
-
-  .older__svg-minus:hover,
-  .older__svg-plus:hover,
-  .kids__svg-minus:hover,
-  .kids__svg-plus:hover {
-    fill:black;
-  }
-
-  .older__svg-minus:active,
-  .older__svg-plus:active,
-  .kids__svg-minus:active,
-  .kids__svg-plus:active {
-    fill:#81b3d2;
-  }
-
-  .catalog__btn {
-    font-size:21px;
-    line-height: 26px;
-    color:white;
-    background-color:#81b3d2;
-    text-decoration: none;
-    width: 458px;
-    padding-top: 17px;
-    padding-bottom: 17px;
-    display: block;
-    text-align: center;
-      -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    border: none;
-    font-family: "PT Sans","Arial", sans-serif;
-    font-weight: 800;
-    text-transform: uppercase;
-  }
-
-  .catalog__btn:hover {
-    background-color: #669ec0;
-  }
-
-  .catalog__btn:active {
-    background-color: #5496bd;
-    color:#9bc2d8;
-  }
-
-  .info__catalog {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-    justify-content: center;
-    margin-top:40px;
-  }
-
-  .developer__text {
+.developer__text {
     font-size:14px;
     line-height: 26px;
     color:black;
@@ -1016,34 +637,11 @@ body {
       min-height: 256px;
   }
 
-
   .info-main__photo {
     background: #85b5d3 url("../img/dewils_bridge.jpg") no-repeat;
     width: 66.669%;
     background-size: cover;
     min-height: 256px;
-  }
-  .content__travel {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-    flex-direction: column;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-    align-items: center;
-    position: relative;
-  }
-  .travel__map {
-    background: url("../img/map.png") no-repeat;
-    width: 100%;
-    height: 593px;
-  }
-
-  .travel__map-hide {
-    background: none;
   }
 
   .hotel {
@@ -1578,6 +1176,371 @@ body {
     fill:#81b3d2;
   }
 
+  .offers {
+    position: relative;
+  
+    margin: 0;
+  
+    line-height: 1.71;
+    color: #333;
+  }
+  
+  .offers h2 {
+    margin: 0;
+    padding-top: 51px;
+    padding-bottom: 25px;
+  
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 1.2;
+    color: #000;
+  }
+  
+  .question {
+    width: 434px;
+    margin: 0 auto;
+    padding-bottom: 49px;
+  
+    text-align: center;
+  }
+  
+  .question p {
+    margin: 0;
+  }
+  
+  .offers-button {
+    display: block;
+  
+    width: 568px;
+    margin: 0 auto;
+    padding: 30px 138px;
+  
+    font-size: 21px;
+    font-weight: bold;
+    line-height: 1.24;
+    text-align: center;
+    text-transform: uppercase;
+  
+    color: #fff;
+    border: none;
+    background-color: #766357;
+  }
+  
+  .offers-button:hover,
+  .offers-button:focus {
+    background-color: #604e43;
+  }
+  
+  .offers-button:active {
+    color: rgba(255, 255, 255, .3);
+    background-color: #503e33;
+  }
+  
+  .form {
+    position: absolute;
+    z-index: 4;
+    right: 0;
+    left: 0;
+    width: 568px;
+    height: 395px;
+    margin: 0 auto;
+    padding: 55px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    font-weight: bold; 
+    text-align: center; 
+    background-color: #ffffff;    
+    -webkit-box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);    
+            box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+            -webkit-animation: slide-down;
+            animation: slide-down;    
+    -webkit-animation-duration: 0.7s;    
+            animation-duration: 0.7s; 
+    -webkit-animation-timing-function: linear; 
+            animation-timing-function: linear;     
+}
+  
+  @keyframes emergence {
+    0% {transform: scaleY(0) translateX(-50%);}
+  
+    100% {transform: scaleY(1) translateX(-50%);}
+  }
+  
+  .offers-button {
+    position: relative;
+    z-index: 1;
+  
+    cursor: pointer;
+  }
+  
+  .form-wrap {
+    position: relative;
+    z-index: 2;
+  
+    display: none;
+  }
+  
+  .map {
+    z-index: 0;
+    bottom: 122px;
+  
+    width: 1200px;
+    height: 593px;
+    min-height: 593px;
+    margin-bottom: -122px;
+  
+    background-color: #f2f2f2;
+  }
+  
+  .image-map { 
+    position: absolute;
+    z-index: 0;
+  }
+  
+  .map-link {
+    position: relative;
+    z-index: 1;
+  }
+  
+  .form-show {
+    display: block;
+  }
+  
+  .form p:last-child {
+    margin: 54px 0 0 0;
+  }
+  
+  .form-line {
+    position: relative;
+    width: 100%;
+    height: 38px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0;
+    align-items: flex-start;
+}
+
+.form-line input[type="text"] {
+    width: 346px;
+    height: 38px;
+
+    background-color: #f2f2f2;
+    border: none;
+    padding: 0;
+    padding-top: 6px;
+    padding-bottom: 5px;
+    padding-left: 14px;
+    padding-right: 45px;
+    
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 26px;
+    text-transform: uppercase;
+    color: #000000;
+    font-family: "PT Sans", "Arial", sans-serif;
+    margin-left: auto;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.form-line-amount {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 50%;
+    height: 38px;
+}
+
+.form-line-amount input[type="text"] {
+    position: relative;
+    width: 38px;
+    padding: 0;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    font-family: "PT Sans", "Arial", sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 26px;
+    text-transform: uppercase;
+    color: #000000;
+    background-color: #f2f2f2;
+    border: none;
+}
+
+.form-line-amount .children {
+    padding-left: 21px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    outline: 1px solid black;
+}
+
+.form-line label {
+    margin-top: 7px;
+}
+
+label[for="children"] {
+    padding-left: 53px;
+}
+  
+.hotel-search-form input[type="text"]::placeholder {
+    color: #000000;
+}
+
+.icon-calendar-button {
+    position: absolute;
+    width: 38px;
+    height: 38px;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.icon-calendar-button:hover path {
+    fill: #000000;
+}
+
+.icon-calendar-button:active path {
+    fill: #81b3d2;
+}
+
+.icon-calendar-button:focus {
+    outline: none;
+}
+
+.btn-minus,
+.btn-plus {
+    position: relative;
+    width: 39px;
+    height: 38px;
+    padding-bottom: 4px;
+    background-color: #f2f2f2;
+    border: none;
+    outline: none;
+}
+
+.btn-minus {
+    margin-left: auto;
+}
+
+.btn-minus::after, 
+.btn-plus::before,
+.btn-plus::after  {
+    content: "";
+    position: absolute;
+    width: 11px;
+    height: 3px;
+    margin: auto;
+    left: 0;
+    right: 0;
+    background-color: #a9a9a9;
+}
+
+.btn-plus::after {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+}
+
+.btn-minus:hover::after,
+.btn-plus:hover::before,
+.btn-plus:hover::after {
+    background-color: #000000;
+}
+.btn-minus:active::after,
+.btn-plus:active::before,
+.btn-plus:active::after {
+    background-color: #81b3d2;
+}
+
+.icon-calendar:hover {
+    color: #000000;
+}
+.icon-calendar:active {
+    color: #81b3d2;
+}
+
+.hotel-search-button-brown {
+    position: absolute; 
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 5;
+    display: block;
+    width: 567px;
+    margin: 0 auto;
+    padding: 31px 0px;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 21px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    border: none;
+    color: #ffffff;
+    background-color: #766357;
+}
+
+.hotel-search-button-blue {
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    padding: 17px 20px;
+    width: 458px;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 21px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: none;
+    color: #ffffff;
+    background-color: #81b3d2;
+}
+
+.hotel-search-button-brown:hover {
+    background-color: #604e43;
+    color: #ffffff;
+}
+
+.hotel-search-button-blue:hover {
+    background-color: #669ec0;
+    color: #ffffff;
+}
+
+.hotel-search-button-brown:active {
+    color: rgba(255, 255, 255, 0.3);
+    background-color: #503e33;
+}
+
+.hotel-search-button-blue:active {
+    background-color: #5496bd;
+    color: rgba(255, 255, 255, 0.3);
+}
+
+.hotel-search-form input:hover {
+    background-color: #ebebeb;
+}
+
+.hotel-search-form input:focus {
+    background-color: #ffffff;
+    outline: 2px solid #e5e5e5;
+  }
+  
   .main-footer {
     position: relative;
   }
@@ -1697,112 +1660,4 @@ body {
 
   .developer__img:active {
     fill:#bdbbbc;
-  }
-
-  @-webkit-keyframes shake {
-    0%,
-      100% {  
-      -webkit-transform: translateX(0); 
-              transform: translateX(0);
-    }
-
-      10%,
-      30%,
-      50%,
-      70%,
-      90% {
-      -webkit-transform: translateX(-5px);
-              transform: translateX(-5px);
-    }
-
-      20%,
-      40%,
-      60%,
-      80% {
-      -webkit-transform: translateX(5px);
-              transform: translateX(5px);
-    }
-  }
-
-  @keyframes shake {
-    0%,
-      100% {  
-      -webkit-transform: translateX(0); 
-              transform: translateX(0);
-    }
-
-      10%,
-      30%,
-      50%,
-      70%,
-      90% {
-      -webkit-transform: translateX(-5px);
-              transform: translateX(-5px);
-    }
-
-      20%,
-      40%,
-      60%,
-      80% {
-      -webkit-transform: translateX(5px);
-              transform: translateX(5px);
-    }
-  }
-
-  @-webkit-keyframes bounce {
-      0% {
-      opacity: 0;
-      -webkit-transform: translateX(-2000px);
-              transform: translateX(-2000px);
-    }
-  
-      30% {
-      opacity: 0.3;
-      -webkit-transform: translateX(30px);
-              transform: translateX(30px);
-    }
-  
-      70% {
-      opacity: 0.7;
-      -webkit-transform: translateX(-10px);
-              transform: translateX(-10px);
-    }
-  
-      100% {
-      opacity: 1;
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-    }
-  }
-
-  @keyframes bounce {
-      0% {
-      opacity: 0;
-      -webkit-transform: translateX(-2000px);
-              transform: translateX(-2000px);
-    }
-  
-      30% {
-      opacity: 0.3;
-      -webkit-transform: translateX(30px);
-              transform: translateX(30px);
-    }
-  
-      70% {
-      opacity: 0.7;
-      -webkit-transform: translateX(-10px);
-              transform: translateX(-10px);
-    }
-  
-      100% {
-      opacity: 1;
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-    }
-  }
-
-  .map__yandex {
-    width: 100%;
-    height: 100%;
-    border: 0;
   }
